# android-automation-framework

./: .gitlab-ci.yml  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/dandantang/autoai/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bbb.lua  main.lua  sss.lua
app/src/main/assets/dandantang111/: dandantangserver
app/src/main/assets/scripts/: task.lua
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/EPL/: JavaEngine.cpp  JavaEngine.h  LuaEngine.cpp  LuaEngine.h  systemmod.cpp  systemmod.h  text_mod.cpp  text_mod.h  time_mod.cpp  time_mod.h
app/src/main/cpp/ce/: api.c  ceserver.c
app/src/main/cpp/lua/: llex.c
app/src/main/java/com/dandantang/autoai/: MainActivity.java  cesss.java  globalvariable.java
app/src/main/java/com/dandantang/autoai/javaluamod/: javasystemluamod.java  luazhfy.java
app/src/main/java/com/dandantang/autoai/服务/: Lua环境管理器.java  UI处理.java  ce.java  mqtt.java  信息读取.java  卡密验证.java  悬浮窗服务.java  截图服务.java  权限申请.java  网络访问.java  蓝牙管理器.java  辅助功能服务.java
app/src/main/res/drawable/: round_button.xml
app/src/main/res/layout/: activity_floating_window.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/java/com/dandantang/autoai/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
